--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 &nbsp;
 &nbsp;
 
-  <a  class="button"  href=""> <strong> Site 3 CSS </strong> </a> 
+  <a  class="button"  href="https://custodiokevin.github.io/TP/"> <strong> Site 3 CSS </strong> </a> 
 
 </center>
 
